--- a/website/nsxt.erb
+++ b/website/nsxt.erb
@@ -2,7 +2,9 @@
   Copyright 2023 VMware, Inc.
   SPDX-License-Identifier: Mozilla Public License 2.0
 -->
+
 <!-- Auto generated code. DO NOT EDIT. -->
+
 <% wrap_layout :inner do %>
   <% content_for :sidebar do %>
     <div class="docs-sidebar hidden-print affix-top" role="complementary">
@@ -18,62 +20,35 @@
         <li<%= sidebar_current("docs-nsxt-vpc-datasource") %>>
           <a href="#">NSX-T Data Sources</a>
           <ul class="nav nav-visible">
-                                    <li<%= sidebar_current("docs-nsxt-shared-infrapolicycontextprofile") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_policy_context_profile.html">SharedInfraPolicyContextProfile</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-infragroup") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_group.html">SharedInfraGroup</a>
+                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraipaddressblock") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_ip_address_block.html">SharedProjectInfraIpAddressBlock</a>
                           </li>
                                     <li<%= sidebar_current("docs-nsxt-shared-infraipaddressblock") %>>
               <a href="/docs/providers/nsxt/d/nsxt_shared_infra_ip_address_block.html">SharedInfraIpAddressBlock</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-infraipaddresspool") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_ip_address_pool.html">SharedInfraIpAddressPool</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-infraservice") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_service.html">SharedInfraService</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-infral2bridgeendpointprofile") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_l2_bridge_endpoint_profile.html">SharedInfraL2BridgeEndpointProfile</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfrapolicycontextprofile") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_policy_context_profile.html">SharedProjectInfraPolicyContextProfile</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfragroup") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_group.html">SharedProjectInfraGroup</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraipaddressblock") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_ip_address_block.html">SharedProjectInfraIpAddressBlock</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraipaddresspool") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_ip_address_pool.html">SharedProjectInfraIpAddressPool</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraservice") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_service.html">SharedProjectInfraService</a>
-                          </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicy") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_gateway_policy.html">GatewayPolicy</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicyrule") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_gateway_policy_rule.html">GatewayPolicyRule</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-group") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_group.html">Group</a>
-                          </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-vpcipaddressallocation") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_vpc_ip_address_allocation.html">VpcIpAddressAllocation</a>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_static_routes.html">StaticRoutes</a>
                           </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-policynatrule") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_policy_nat_rule.html">PolicyNatRule</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-securitypolicy") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_security_policy.html">SecurityPolicy</a>
-                          </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-securitypolicyrule") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_security_policy_rule.html">SecurityPolicyRule</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_static_routes.html">StaticRoutes</a>
+                                    <li<%= sidebar_current("docs-nsxt-shared-infral2bridgeendpointprofile") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_l2_bridge_endpoint_profile.html">SharedInfraL2BridgeEndpointProfile</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-securitypolicy") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_security_policy.html">SecurityPolicy</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraservice") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_service.html">SharedProjectInfraService</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfraipaddresspool") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_ip_address_pool.html">SharedProjectInfraIpAddressPool</a>
                           </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-vpcsubnet") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_vpc_subnet.html">VpcSubnet</a>
@@ -81,8 +56,35 @@
                                     <li<%= sidebar_current("docs-nsxt-vpc-ipaddressallocation") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_ip_address_allocation.html">IpAddressAllocation</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-subnetport") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_subnet_port.html">SubnetPort</a>
+                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfragroup") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_group.html">SharedProjectInfraGroup</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicyrule") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_gateway_policy_rule.html">GatewayPolicyRule</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-projectinfrapolicycontextprofile") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_project_infra_policy_context_profile.html">SharedProjectInfraPolicyContextProfile</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-vpcsubnetport") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_vpc_subnet_port.html">VpcSubnetPort</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-infraservice") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_service.html">SharedInfraService</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-infragroup") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_group.html">SharedInfraGroup</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-group") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_group.html">Group</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-infrapolicycontextprofile") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_policy_context_profile.html">SharedInfraPolicyContextProfile</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-vpcipaddressallocation") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_vpc_ip_address_allocation.html">VpcIpAddressAllocation</a>
+                          </li>
+                                    <li<%= sidebar_current("docs-nsxt-shared-infraipaddresspool") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_shared_infra_ip_address_pool.html">SharedInfraIpAddressPool</a>
                           </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-dhcpv4staticbindingconfig") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_dhcp_v4_static_binding_config.html">DhcpV4StaticBindingConfig</a>
@@ -91,7 +93,7 @@
               <a href="/docs/providers/nsxt/d/nsxt_vpc_dhcp_v6_static_binding_config.html">DhcpV6StaticBindingConfig</a>
                           </li>
                       <li<%= sidebar_current("docs-nsxt-datasource-vpc-vm") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_vm.html"></a>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_vm.html">VM</a>
             </li>
           </ul>
         </li>
@@ -99,35 +101,38 @@
         <li<%= sidebar_current("docs-nsxt-vpc-resource") %>>
           <a href="#">Resources</a>
           <ul class="nav nav-visible">
-                      <li<%= sidebar_current("docs-nsxt-vpc-vpcsubnet") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_vpc_subnet.html">VpcSubnet</a>
-            </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-subnetport") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_subnet_port.html">SubnetPort</a>
-            </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-securitypolicy") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_security_policy.html">SecurityPolicy</a>
-            </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-securitypolicyrule") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_security_policy_rule.html">SecurityPolicyRule</a>
-            </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicy") %>>
+                      <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicy") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_gateway_policy.html">GatewayPolicy</a>
             </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicyrule") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_gateway_policy_rule.html">GatewayPolicyRule</a>
-            </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-group") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_group.html">Group</a>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_static_routes.html">StaticRoutes</a>
             </li>
 		                  <li<%= sidebar_current("docs-nsxt-vpc-policynatrule") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_policy_nat_rule.html">PolicyNatRule</a>
             </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-vpcipaddressallocation") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_vpc_ip_address_allocation.html">VpcIpAddressAllocation</a>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-securitypolicyrule") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_security_policy_rule.html">SecurityPolicyRule</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-securitypolicy") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_security_policy.html">SecurityPolicy</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-vpcsubnet") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_vpc_subnet.html">VpcSubnet</a>
             </li>
 		                  <li<%= sidebar_current("docs-nsxt-vpc-ipaddressallocation") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_ip_address_allocation.html">IpAddressAllocation</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-gatewaypolicyrule") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_gateway_policy_rule.html">GatewayPolicyRule</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-vpcsubnetport") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_vpc_subnet_port.html">VpcSubnetPort</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-group") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_group.html">Group</a>
+            </li>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-vpcipaddressallocation") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_vpc_ip_address_allocation.html">VpcIpAddressAllocation</a>
             </li>
 		                  <li<%= sidebar_current("docs-nsxt-vpc-dhcpv4staticbindingconfig") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_dhcp_v4_static_binding_config.html">DhcpV4StaticBindingConfig</a>
@@ -135,11 +140,8 @@
 		                  <li<%= sidebar_current("docs-nsxt-vpc-dhcpv6staticbindingconfig") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_dhcp_v6_static_binding_config.html">DhcpV6StaticBindingConfig</a>
             </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_static_routes.html">StaticRoutes</a>
-            </li>
 		                  <li<%= sidebar_current("docs-nsxt-vpc-resource-vpcvmtags") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_vm_tags.html"></a>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_vm_tags.html">VMTags</a>
             </li>
           </ul>
         </li>
