Yaml recent changes uptake, bug fix for Rule and utils file not ignoring keys in API returned data which aren't present in resource schema.

--- a/website/nsxt.erb
+++ b/website/nsxt.erb
@@ -32,8 +32,8 @@
                                     <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_static_routes.html">StaticRoutes</a>
                           </li>
-                                    <li<%= sidebar_current("docs-nsxt-vpc-policynatrule") %>>
-              <a href="/docs/providers/nsxt/d/nsxt_vpc_policy_nat_rule.html">PolicyNatRule</a>
+                                    <li<%= sidebar_current("docs-nsxt-vpc-policyvpcnatrule") %>>
+              <a href="/docs/providers/nsxt/d/nsxt_vpc_policy_vpc_nat_rule.html">PolicyVpcNatRule</a>
                           </li>
                                     <li<%= sidebar_current("docs-nsxt-vpc-securitypolicyrule") %>>
               <a href="/docs/providers/nsxt/d/nsxt_vpc_security_policy_rule.html">SecurityPolicyRule</a>
@@ -107,8 +107,8 @@
 		                  <li<%= sidebar_current("docs-nsxt-vpc-staticroutes") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_static_routes.html">StaticRoutes</a>
             </li>
-		                  <li<%= sidebar_current("docs-nsxt-vpc-policynatrule") %>>
-              <a href="/docs/providers/nsxt/r/nsxt_vpc_policy_nat_rule.html">PolicyNatRule</a>
+		                  <li<%= sidebar_current("docs-nsxt-vpc-policyvpcnatrule") %>>
+              <a href="/docs/providers/nsxt/r/nsxt_vpc_policy_vpc_nat_rule.html">PolicyVpcNatRule</a>
             </li>
 		                  <li<%= sidebar_current("docs-nsxt-vpc-securitypolicyrule") %>>
               <a href="/docs/providers/nsxt/r/nsxt_vpc_security_policy_rule.html">SecurityPolicyRule</a>
